keep a relatively constant search result height, because moving pagination is bleh

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -254,6 +254,13 @@ body.outfits-edit
         display: none
       #preview-search-advanced
         display: block
+  #preview-search-basic > ul
+    font-size: 85%
+
+    .object
+      min-height: 150px
+      > ul a
+        font-size: 100%
   #preview-search-advanced
     display: none
     margin-left: 2em
