more spacing for advanced form

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -270,6 +270,8 @@ body.outfits-edit
     div
       +inline-block
       font-size: 87.5%
+      margin-top: .5em
+      margin-bottom: 1.5em
       vertical-align: top
       width: 32%
 
