--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -279,19 +279,16 @@ body.outfits-edit
         label
           +inline-block
 
+      li.text label
+        width: 12em
+
+      li.select label
+        width: 8em
+
       li.checkbox
         list-style: none
         margin-left: -24px
 
-      &:nth-of-type(1)
-        li.text, li.select
-          label
-            width: 12em
-
-      &:nth-of-type(2)
-        li.text, li.select
-          label
-            width: 5em
   #preview-search-advanced-link
     font-size: 85%
     margin-right: 1em
