give empty search form more space

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -345,6 +345,8 @@ body.outfits-edit
     #preview-search
       bottom: 1.5em
       left: 0
+      margin-top: .5em
+      margin-bottom: 1em
       overflow: auto
       padding: .5em 1em
       position: absolute
