add an item search form to closet so that new users will be less stumped

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -200,8 +200,6 @@ body.outfits-edit
     .sidebar-view
       margin: 1.5em 0
   #preview-closet
-    h2
-      margin-bottom: 0
     ul
       text-align: center
     .object
@@ -218,6 +216,14 @@ body.outfits-edit
         padding-bottom: 1.25em
         .no-assets-message
           display: block
+    .item-search
+      font-size: 85%
+      margin-bottom: 1em
+      text-align: center
+
+      span
+        font-weight: bold
+        margin-right: 1em
   .no-assets-message
     background: $error-bg-color - #080808
     bottom: 0
