put textbox labels always above the boxes

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -286,7 +286,7 @@ body.outfits-edit
           +inline-block
 
       li.text label
-        width: 12em
+        display: block
 
       li.select label
         width: 8em
