ohh, top padding on search is important. can only see with a full bleed pet :P

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -239,6 +239,7 @@ body.outfits-edit
     width: 30em
   #preview-search
     clear: both
+    padding-top: .5em
     text-align: left
     h2
       +inline-block
