basic advanced search behavior; only name supported right now

--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -136,12 +136,12 @@
               %label{for: 'advanced-search-occupies'} Occupies
               -# TODO: populate
               %select{id: 'advanced-search-occupies'}
-                %option any zone
+                %option{value: ''} any zone
             %li.select
               %label{for: 'advanced-search-restricts'} Restricts
               -# TODO: populate
               %select{id: 'advanced-search-restricts'}
-                %option any or no zones
+                %option{value: ''} any or no zones
         %div
           %ul
             %li.checkbox
