filter by user owns/wants

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -861,6 +861,8 @@ body.outfits-edit
       display: none
     #preview-outfits-list
       display: block
+    #advanced-search-log-in-link
+      display: none
 
   &.user-not-signed-in
     #save-outfit-not-signed-in
