update current species name

--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -145,8 +145,7 @@
               %input{type: 'checkbox', id: 'advanced-search-species'}
               %label{for: 'advanced-search-species'}
                 Fits the
-                -# TODO: update to current species
-                %span Acara
+                %span
                 (the current species)
             %li.checkbox.must-log-in
               %input{type: 'checkbox', id: 'advanced-search-owns', disabled: true}
