--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -296,6 +296,10 @@ body.outfits-edit
         list-style: none
         margin-left: -24px
 
+      &:nth-of-type(2), &:nth-of-type(3)
+        li:first-child
+          margin-bottom: .75em
+
   #preview-search-advanced-link
     font-size: 85%
     margin-right: 1em
