--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -101,11 +101,17 @@
         %a#preview-search-advanced-link{href: 'javascript:void(0)'}= t '.search.advanced.header'
         %a#preview-search-form-clear{:href => "#"}= t '.search.form.clear'
         #preview-search-form-pagination
-      #preview-search-form-loading= t '.search.loading'
-      #preview-search-form-error.possible-error
-      #preview-search-form-no-results
-        = t '.search.no_results_html', :query => content_tag(:span)
-      %ul
+      #preview-search-basic-main
+        #preview-search-form-loading= t '.search.loading'
+        #preview-search-form-error.possible-error
+        #preview-search-form-no-results
+          = t '.search.no_results_html', :query => content_tag(:span)
+        %ul#preview-search-results
+        %ul#tips
+          - WardrobeTip.by_index.each do |tip|
+            %li
+              %h3 Did you know?
+              %div= md tip.body
     %form#preview-search-advanced
       %header
         %h2= t '.search.advanced.header'
