--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -275,6 +275,14 @@ body.outfits-edit
       padding-left: image-width("tip.png") + 12px
       width: 400px
 
+      footer
+        color: $soft-text-color
+        font-size: 85%
+        text-align: right
+
+        a, span
+          margin-left: .5em
+
   #preview-search-advanced
     display: none
 
