--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -267,7 +267,6 @@ body.outfits-edit
     li
       box-sizing: border-box
       display: none
-      height: 150px
       list-style: none
       margin: 0 auto
       padding: 1em
@@ -275,11 +274,11 @@ body.outfits-edit
       width: 600px
 
       footer
-        bottom: 1em
         color: $soft-text-color
         font-size: 85%
         position: absolute
         right: 1em
+        top: 1.5em
 
         a, span
           margin-left: .5em
