handle errors from neopia, finally!

--- a/app/assets/stylesheets/outfits/_new.sass
+++ b/app/assets/stylesheets/outfits/_new.sass
@@ -3,6 +3,9 @@
 body.outfits-new
   +campaign-progress
 
+  #pet-not-found, #neopia-error
+    display: none
+
   #outfit-forms
     +clearfix
     +module
