--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -2,6 +2,9 @@
 
 = campaign_progress
 
+%p#pet-not-found.alert= t 'pets.load.not_found'
+%p#neopia-error.alert= t 'pets.load.neopia_error'
+
 #outfit-forms
   - localized_cache :action_suffix => 'outfit_forms_intro' do
     #pet-preview
