dont allow blank name submissions in modeling hub small form

--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -66,7 +66,8 @@
       = form_tag remote_load_pet_path, method: 'POST' do
         = hidden_field_tag 'impress_user', current_user.try(:id)
         = hidden_field_tag 'redirect', "#{root_url}\#{q}"
-        = pet_name_tag :placeholder => t('.modeling_hub.load_pet.placeholder')
+        = pet_name_tag placeholder: t('.modeling_hub.load_pet.placeholder'),
+          required: true
         = submit_tag t('.modeling_hub.load_pet.submit')
 
 - localized_cache 'outfits#new latest_contribution' do
