fall back to image if flash unsupported in outfits#show (e.g. mobile)

--- a/app/views/outfits/show.html.haml
+++ b/app/views/outfits/show.html.haml
@@ -22,6 +22,7 @@
 
 #preview-wrapper
   #preview-swf
+    %img{src: @outfit.image.url}
 #outfit-items= render @outfit.worn_items
 - content_for :javascripts do
   :javascript
