--- a/app/views/static/terms.html.haml
+++ b/app/views/static/terms.html.haml
@@ -1,44 +1,53 @@
-
 %p
   Our policy is short and sweet at this point. And by using our site, you
-  agree to our Terms of Use. Thanks!
+  agree to our Terms of Use. Thanks! ("We" here refers to the administrators of
+  "the site", Dress to Impress.)
 %hr
 %p
-  If you hit our servers with automated requests in ways which were not
-  intended, you will be banned at our sole discretion. Public APIs are
-  intended methods. If a page on our site is not clearly marked as a public
-  API, it is not an intended method.
+  Dress to Impress tries to keep its data up-to-date automatically, and usually
+  does a pretty good job. However, sometimes our data is out of date (like TNT
+  made an error and then fixed it, but we never saw the fixed copy), and
+  sometimes the site just makes a mistake. For this reason, we make absolutely
+  no guarantee that our site behaves correctly or that our data is accurate.
+  The site is provided "as is", without warranty of any kind. In no event shall
+  we be liable for any claim, damages, or other liability arising from, out of,
+  or in connection with the site or the use or other dealings in the site.
+  (For example, if you buy NC because the site said an item would look a
+  certain way on your pet but it turned out to be wrong: we're very sorry,
+  please remodel the item for us on your pet, please submit a bug report if
+  it isn't fixed automatically, and thanks so much for helping us fix the bug,
+  but we can't afford to reimburse you for your NC. Here's hoping
+  the NC trading scene can help you get something just as pretty.)
 %p
-  You may look at the code for educational purposes; however, if you
-  directly use any part of the front-end or back-end code for your own
-  purposes, you
-  %strong must
-  prominently credit its original
-  source
-  == (#{link_to 'OpenNeo', 'http://www.openneo.net/'})
-  on every single web page on which the code is used, or which the code is used
-  to produce. If you make improvements to the code, we appreciate, but do not
-  require, that you submit those improvements to the original codebase. See the
-  = link_to 'license', 'https://github.com/matchu/openneo-impress/blob/master/LICENSE'
-  for more information.
+  We reserve the right to limit or refuse service to any user for any reason.
+  This includes but is not limited to posting content that we consider
+  offensive (as a rule of thumb, keep it PG) or making excessive automated
+  requests to our server.
 %p
-  Attempts to misuse this website are acceptable as long as they are for
-  the sole purpose of improving this website. All security issues must be
-  immediately reported to
-  == #{link_to 'OpenNeo', 'http://www.openneo.net/'},
-  and may not be used for any malicious purpose. If you inform someone else
-  of a security hole and he or she abuses it, both of your are considered
-  responsible.
+  The site's
+  = link_to 'source code', 'https://github.com/matchu/openneo-impress-rails'
+  is freely available, but its use is restricted by its
+  #{link_to 'license', 'https://github.com/matchu/openneo-impress-rails/blob/master/LICENSE'}.
+  The gist is that you're free to read the source code as much as you like, and
+  even copy parts of it, so long as you clearly indicate that we are the
+  original authors.
 %p
-  In short, use our website as much as you like, but do no harm. Or you
-  %strong will
-  be punished.
+  However, even though we love to share the source code we wrote, we believe
+  that the customization data we've received belongs to the community, and we
+  therefore protect it much more aggressively. Do not copy our data about how
+  pets and items look or their associated metadata; if you're interested in
+  using that data, please contact us directly.
+%p
+  Sometimes our users submit original content to the site, including but not
+  limited to outfits and item lists. By submitting such content to us, you
+  grant us a license to use it and redistribute it in whatever way we see fit,
+  now and forever. If you're interested in redistributing content submitted by
+  other users, you'll have to find the submitter and ask them yourself.
+%p
+  Sometimes these terms change. We'll usually try to draw attention to it when
+  they do, but, ultimately, it's your responsibility to check the terms
+  regularly; whenever you use the site, you're agreeing to the version of the
+  terms posted at that time.
 %hr
-%p
-  Sorry if that scared you. It's really just to make clear that there are
-  certain unacceptable behaviors when it comes to accessing a website, but only
-  those looking to cause trouble are likely to really cause any. If all you
-  want to do here is dress up your pets, then there's absolutely no need to
-  worry.
 %p
   %strong Thanks for using Dress to Impress!
